# TradeReminder

./: alembic.ini  database.db  pyproject.toml
alembic_scripts/: env.py
alembic_scripts/versions/: 2025_10_22_1438-bcc083138325_init.py
database/: .env  config.py  database.py  models.py  sql_enums.py  test.py
