[project]
name = "tradereminder"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "aisqlite>=1.1.0",
    "alembic>=1.17.0",
    "greenlet>=3.2.4",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.44",
]
